--- a/pharmacy_sales_system/frontend/src/app/componentes/home/home.html
+++ b/pharmacy_sales_system/frontend/src/app/componentes/home/home.html
@@ -1,25 +1,33 @@
 <div class="pos-container container-fluid bg-light p-3">
+    <!-- BARRA DE NAVEGACIÓN ÚNICA Y CORRECTA -->
     <header class="navbar navbar-expand-lg navbar-dark bg-primary rounded-top shadow-sm px-3 mb-3">
-        <div class="container-fluid p-0">
-            <ul class="navbar-nav d-flex flex-row">
-                <li class="nav-item me-3"><a routerLink="/productos"
-                        class="nav-link text-white d-flex flex-column align-items-center"><i
-                            class="bi bi-box-seam fs-4"></i><small>Productos</small></a></li>
-                <li class="nav-item me-3"><a href="#"
-                        class="nav-link text-white d-flex flex-column align-items-center"><i
-                            class="bi bi-cash fs-4"></i><small>Ventas</small></a></li>
-                <li class="nav-item me-3"><a href="#"
-                        class="nav-link text-white d-flex flex-column align-items-center"><i
-                            class="bi bi-bar-chart-line fs-4"></i><small>Estadisticas</small></a></li>
-                <li class="nav-item me-3"><a href="#"
-                        class="nav-link text-white d-flex flex-column align-items-center"><i
-                            class="bi bi-cart3 fs-4"></i><small>Carrito de compras</small></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-white d-flex flex-column align-items-center"><i
-                            class="bi bi-person fs-4"></i><small>Usuario</small></a></li>
+        <div class="container-fluid p-0 d-flex justify-content-between">
+            
+            <!-- Grupo de íconos de la izquierda -->
+            <ul class="navbar-nav d-flex flex-row align-items-center">
+                <li class="nav-item me-3">
+                    <a routerLink="/productos" class="nav-link text-white d-flex flex-column align-items-center">
+                        <i class="bi bi-box-seam fs-4"></i><small>Productos</small>
+                    </a>
+                </li>
+                <li class="nav-item me-3">
+                    <a href="#" class="nav-link text-white d-flex flex-column align-items-center">
+                        <i class="bi bi-cash fs-4"></i><small>Ventas</small>
+                    </a>
+                </li>
+                <li class="nav-item me-3">
+                    <a href="#" class="nav-link text-white d-flex flex-column align-items-center">
+                        <i class="bi bi-bar-chart-line fs-4"></i><small>Estadisticas</small>
+                    </a>
+                </li>
             </ul>
-            <a class="navbar-brand fs-1 fw-bold" href="#"><i class="bi bi-box-arrow-right fs-4"></i></a>
+            
+            <app-navbar></app-navbar>
+
         </div>
     </header>
+
+    <!-- Contenido principal de la página -->
     <div class="row g-3">
         <div class="col-lg-5 d-flex flex-column">
             <div class="card shadow-sm flex-grow-1">
@@ -27,7 +35,7 @@
                 <div class="card-body p-0">
                     <ul class="list-group list-group-flush message-list">
                         <li *ngFor="let producto of productos" class="list-group-item d-flex align-items-center">
-                            {{ producto.nombre }} - {{ producto.precio }}
+                            {{ producto.codigo }} - {{ producto.nombre }} - S/ {{ producto.precio }}
                         </li>
                     </ul>
                 </div>
@@ -36,9 +44,9 @@
                 <div class="card-body bg-primary-subtle rounded">
                     <h5 class="card-title text-primary-emphasis">Escanear artículo o UPC</h5>
                     <div class="input-group">
-                        <input type="text" [(ngModel)]="codigoInput" class="form-control form-control-lg"
+                        <input type="text" [(ngModel)]="codigoInput" (keyup.enter)="escanearProducto()" class="form-control form-control-lg"
                             placeholder="Escanee o teclee un ID o UPC de artículo">
-                        <button class="btn btn-primary" type="button" id="button-scan" (click)="escanearProducto()">
+                        <button class="btn btn-primary" type="button" (click)="escanearProducto()">
                             <i class="bi bi-upc-scan fs-2"></i>
                         </button>
                     </div>
