--- a/pharmacy_sales_system/frontend/src/app/componentes/home/home.html
+++ b/pharmacy_sales_system/frontend/src/app/componentes/home/home.html
@@ -20,6 +20,12 @@
                         <i class="bi bi-bar-chart-line fs-4"></i><small>Estadisticas</small>
                     </a>
                 </li>
+                <!-- Botón para Usuarios (Visible solo para admin/propietario) -->
+                <li *ngIf="currentUser?.rol === 'admin' || currentUser?.rol === 'propietario'" class="nav-item me-3">
+                    <a routerLink="/users" class="nav-link text-white d-flex flex-column align-items-center" title="Usuarios">
+                        <i class="bi bi-person-plus fs-4"></i><small>Usuarios</small>
+                    </a>
+                </li>
             </ul>
             
             <app-navbar></app-navbar>
