feat: se agrega botón de volveral componente historial

--- a/pharmacy_sales_system/frontend/src/app/componentes/historial-ventas/historial-ventas.html
+++ b/pharmacy_sales_system/frontend/src/app/componentes/historial-ventas/historial-ventas.html
@@ -1,5 +1,9 @@
 <!-- frontend/app/componentes/historial-ventas/historial-ventas.html -->
-
+<div class="card-footer">
+    <a routerLink="/home" class="btn btn-outline-secondary">
+        <i class="bi bi-arrow-left-circle me-2"></i>Volver
+    </a>
+</div>
 <div class="container mt-4 mb-5">
     <!-- Tarjeta de Filtros -->
     <div class="card shadow-sm mb-4">
@@ -114,6 +118,7 @@
                             </table>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
