--- a/pharmacy_sales_system/frontend/src/app/componentes/home/home.html
+++ b/pharmacy_sales_system/frontend/src/app/componentes/home/home.html
@@ -11,13 +11,15 @@
                     </a>
                 </li>
                 <li class="nav-item me-3">
-                    <a class="nav-link text-white d-flex flex-column align-items-center" routerLink="/historial-ventas" routerLinkActive="active">
+                    <a class="nav-link text-white d-flex flex-column align-items-center" routerLink="/historial-ventas"
+                        routerLinkActive="active">
                         <i class="bi bi-receipt-cutoff fs-4"></i>Historial
                     </a>
                 </li>
                 <li class="nav-item me-3">
-                    <a href="#" class="nav-link text-white d-flex flex-column align-items-center">
-                        <i class="bi bi-bar-chart-line fs-4"></i><small>Estadisticas</small>
+                    <a class="nav-link text-white d-flex flex-column align-items-center" routerLink="/estadisticas" routerLinkActive="active">
+                        <i class="bi bi-graph-up-arrow fs-4"></i>
+                        <span>Estadísticas</span>
                     </a>
                 </li>
                 <!-- Botón para Usuarios (Visible solo para admin/propietario) -->
